--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ body.christmas #admin-modal .modal-content { background:#440000; color:white; }
 <button id="mode-toggle">🌙</button>
 
 <!-- 🎄 CHRISTMAS TITLE -->
-<div id="merry-christmas">Merry Christmas</div>
+<div id="merry-christmas"> </div>
 
 <!-- Snow Canvas -->
 <canvas id="snow-canvas"></canvas>
@@ -411,3 +411,4 @@ applyMode("light");
 
 </body>
 </html>
+
